# robotics_projects

./: .directory  .gitignore
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/pkgconfig/: project1.pc
devel/share/project1/cmake/: project1Config.cmake
first_project/src/: .directory
first_project/src/project1/: CMakeLists.txt
first_project/src/project1/src/: synch_node.cpp
first_project/src/project1/srv/: DistanceComputer.srv
second_project/src/project2/: CMakeLists.txt  package.xml
second_project/src/project2/cfg/: local_costmap_params.yaml
second_project/src/project2/launch/: amcl.launch  amcl.launch.xml  gmapping_optitrack.launch  gmapping_visual.launch  launch_file.launch
second_project/src/project2/maps/: map_optitrack.yaml  map_visual.yaml
second_project/src/project2/params/: gmapping_visual_params.yaml
second_project/src/project2/rviz/: amcl.rviz
src/project1/: CMakeLists.txt  CMakeLists.txt.user.c6e86e5.21  package.xml
src/project1/cfg/: parameters.cfg
src/project1/launch/: launch_file.launch
src/project1/src/: distance_computer.cpp  ecef_to_enu.cpp  synch_node.cpp
